Add Local External Sort

--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -35,6 +35,7 @@ include_directories("${PROJECT_SOURCE_DIR}/util/header")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/header")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/header/inplace")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/header/proto")
+include_directories("${PROJECT_SOURCE_DIR}/benchmark/proto/*.h")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/header/flatbuffers")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/header/flatbuffers/flatbuffers")
 
@@ -44,6 +45,8 @@ include_directories("${PROJECT_SOURCE_DIR}/util/source")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/source/")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/source/inplace/")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/source/proto/")
+include_directories("${PROJECT_SOURCE_DIR}/benchmark/*.cc")
+include_directories("${PROJECT_SOURCE_DIR}/benchmark/*.cpp")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/source/flatbuffers/")
 include_directories("${PROJECT_SOURCE_DIR}/experiments/")
 
@@ -55,218 +58,238 @@ file(GLOB srcInPlace "${PROJECT_SOURCE_DIR}/serialization/source/inplace/*.cpp")
 file(GLOB srcProtobuf "${PROJECT_SOURCE_DIR}/serialization/source/proto/*.cpp")
 file(GLOB srcProtobufcc "${PROJECT_SOURCE_DIR}/serialization/source/proto/*.cc")
 file(GLOB srcFlatbuf "${PROJECT_SOURCE_DIR}/serialization/source/flatbuffers/*.cpp")
+file(GLOB srcBenchmarkCC "${PROJECT_SOURCE_DIR}/benchmark/proto/*.cc")
 
 
-# prepare data
-add_executable(DataPrepare
-        experiments/DataPrepare.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
+## prepare data
+#add_executable(DataPrepare
+#        experiments/DataPrepare.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataPrepare PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataPrepare PRIVATE mongo::mongocxx_shared)
+#
+## load data to memory- single thread
+#add_executable(DataLoadToMemorySingle
+#        experiments/DataLoadToMemorySingle.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataLoadToMemorySingle PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataLoadToMemorySingle PRIVATE mongo::mongocxx_shared)
+#
+## load data to memory- multi thread
+#add_executable(DataLoadToMemoryParallel
+#        experiments/DataLoadToMemoryParallel.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataLoadToMemoryParallel PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataLoadToMemoryParallel PRIVATE mongo::mongocxx_shared)
+#
+#
+## serialize data single thread
+#add_executable(DataSerializationSingle
+#        experiments/DataSerializationSingle.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataSerializationSingle PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataSerializationSingle PRIVATE mongo::mongocxx_shared)
+#
+## serialize data multi thread
+#add_executable(DataSerializationParallel
+#        experiments/DataSerializationParallel.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataSerializationParallel PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataSerializationParallel PRIVATE mongo::mongocxx_shared)
+#
+## serialize data single thread
+#add_executable(DataWriteSingle
+#        experiments/DataWriteSingle.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataWriteSingle PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataWriteSingle PRIVATE mongo::mongocxx_shared)
+#
+## serialize data multi thread
+#add_executable(DataWriteParallel
+#        experiments/DataWriteParallel.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataWriteParallel PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataWriteParallel PRIVATE mongo::mongocxx_shared)
+#
+## read data single thread
+#add_executable(DataReadSingle
+#        experiments/DataReadSingle.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataReadSingle PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataReadSingle PRIVATE mongo::mongocxx_shared)
+#
+#add_executable(DataReadParallel
+#        experiments/DataReadParallel.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataReadParallel PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataReadParallel PRIVATE mongo::mongocxx_shared)
+#
+## read I/O data single thread
+#add_executable(DataReadIOSingle
+#        experiments/DataReadIOSingle.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataReadIOSingle PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataReadIOSingle PRIVATE mongo::mongocxx_shared)
+#
+#
+## read I/O data multi thread
+#add_executable(DataReadIOParallel
+#        experiments/DataReadIOParallel.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataReadIOParallel PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataReadIOParallel PRIVATE mongo::mongocxx_shared)
+#
+## External sort
+#add_executable(ExternalSort
+#        experiments/ExternalSort.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(ExternalSort PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(ExternalSort PRIVATE mongo::mongocxx_shared)
+#
+## External sort IO
+#add_executable(ExternalSortIO
+#        experiments/ExternalSortIO.cpp
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(ExternalSortIO PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(ExternalSortIO PRIVATE mongo::mongocxx_shared)
+#
+#
+## Data Read Network
+#add_executable(DataReadNetwork
+#        experiments/DataReadNetwork.cpp
+#        util/header/
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataReadNetwork PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataReadNetwork PRIVATE mongo::mongocxx_shared)
+#
+## Data Read Network NetworkIO
+#add_executable(DataReadNetworkIO
+#        experiments/DataReadNetworkIO.cpp
+#        util/header/
+#        ${srcIO}
+#        ${srcUtil}
+#        ${srcSerialization}
+#        ${srcInPlace}
+#        ${srcProtobuf}
+#        ${srcProtobufcc}
+#        ${srcFlatbuf}
+#        )
+#target_link_libraries(DataReadNetworkIO PRIVATE mongo::bsoncxx_shared)
+#target_link_libraries(DataReadNetworkIO PRIVATE mongo::mongocxx_shared)
+
+# Benchmark
+add_executable(SimpleObject
+        benchmark/SimpleObject.cpp
+        ${srcBenchmark}
+        ${srcBenchmarkCC}
         )
-target_link_libraries(DataPrepare PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataPrepare PRIVATE mongo::mongocxx_shared)
 
-# load data to memory- single thread
-add_executable(DataLoadToMemorySingle
-        experiments/DataLoadToMemorySingle.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
+add_executable(ComplexObjectL1
+        benchmark/ComplexObjectL1.cpp
+        ${srcBenchmark}
+        ${srcBenchmarkCC}
         )
-target_link_libraries(DataLoadToMemorySingle PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataLoadToMemorySingle PRIVATE mongo::mongocxx_shared)
 
-# load data to memory- multi thread
-add_executable(DataLoadToMemoryParallel
-        experiments/DataLoadToMemoryParallel.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
+add_executable(ComplexObjectL2
+        benchmark/ComplexObjectL2.cpp
+        ${srcBenchmark}
+        ${srcBenchmarkCC}
         )
-target_link_libraries(DataLoadToMemoryParallel PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataLoadToMemoryParallel PRIVATE mongo::mongocxx_shared)
-
-
-# serialize data single thread
-add_executable(DataSerializationSingle
-        experiments/DataSerializationSingle.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataSerializationSingle PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataSerializationSingle PRIVATE mongo::mongocxx_shared)
-
-# serialize data multi thread
-add_executable(DataSerializationParallel
-        experiments/DataSerializationParallel.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataSerializationParallel PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataSerializationParallel PRIVATE mongo::mongocxx_shared)
-
-# serialize data single thread
-add_executable(DataWriteSingle
-        experiments/DataWriteSingle.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataWriteSingle PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataWriteSingle PRIVATE mongo::mongocxx_shared)
-
-# serialize data multi thread
-add_executable(DataWriteParallel
-        experiments/DataWriteParallel.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataWriteParallel PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataWriteParallel PRIVATE mongo::mongocxx_shared)
-
-# read data single thread
-add_executable(DataReadSingle
-        experiments/DataReadSingle.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataReadSingle PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataReadSingle PRIVATE mongo::mongocxx_shared)
-
-add_executable(DataReadParallel
-        experiments/DataReadParallel.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataReadParallel PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataReadParallel PRIVATE mongo::mongocxx_shared)
-
-# read I/O data single thread
-add_executable(DataReadIOSingle
-        experiments/DataReadIOSingle.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataReadIOSingle PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataReadIOSingle PRIVATE mongo::mongocxx_shared)
-
-
-# read I/O data multi thread
-add_executable(DataReadIOParallel
-        experiments/DataReadIOParallel.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataReadIOParallel PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataReadIOParallel PRIVATE mongo::mongocxx_shared)
-
-# External sort
-add_executable(ExternalSort
-        experiments/ExternalSort.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(ExternalSort PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(ExternalSort PRIVATE mongo::mongocxx_shared)
-
-# External sort IO
-add_executable(ExternalSortIO
-        experiments/ExternalSortIO.cpp
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(ExternalSortIO PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(ExternalSortIO PRIVATE mongo::mongocxx_shared)
-
-
-# Data Read Network
-add_executable(DataReadNetwork
-        experiments/DataReadNetwork.cpp
-        util/header/
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataReadNetwork PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataReadNetwork PRIVATE mongo::mongocxx_shared)
-
-# Data Read Network NetworkIO
-add_executable(DataReadNetworkIO
-        experiments/DataReadNetworkIO.cpp
-        util/header/
-        ${srcIO}
-        ${srcUtil}
-        ${srcSerialization}
-        ${srcInPlace}
-        ${srcProtobuf}
-        ${srcProtobufcc}
-        ${srcFlatbuf}
-        )
-target_link_libraries(DataReadNetworkIO PRIVATE mongo::bsoncxx_shared)
-target_link_libraries(DataReadNetworkIO PRIVATE mongo::mongocxx_shared)
