--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -278,17 +278,17 @@ file(GLOB srcBenchmarkCCF "${PROJECT_SOURCE_DIR}/benchmark/flatbuffers/*.cc")
 #target_link_libraries(DataReadNetworkIO PRIVATE mongo::mongocxx_shared)
 
 # Benchmark
-add_executable(ProtoSimpleObject
-        benchmark/proto/SimpleObject.cpp
-        ${srcBenchmark}
-        ${srcBenchmarkCCP}
-        )
+#add_executable(ProtoSimpleObject
+#        benchmark/proto/SimpleObject.cpp
+#        ${srcBenchmark}
+#        ${srcBenchmarkCCP}
+#        )
 
-add_executable(ProtoComplexObjectL4
-        benchmark/proto/ComplexObjectL4.cpp
-        ${srcBenchmark}
-        ${srcBenchmarkCCP}
-        )
+#add_executable(ProtoComplexObjectL4
+#        benchmark/proto/ComplexObjectL4.cpp
+#        ${srcBenchmark}
+#        ${srcBenchmarkCCP}
+#        )
 
 #add_executable(ProtoComplexObjectL3
 #        benchmark/proto/ComplexObjectL3.cpp
