Add Complex Objects

--- a/src/main/cpp/CMakeLists.txt
+++ b/src/main/cpp/CMakeLists.txt
@@ -36,6 +36,7 @@ include_directories("${PROJECT_SOURCE_DIR}/serialization/header")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/header/inplace")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/header/proto")
 include_directories("${PROJECT_SOURCE_DIR}/benchmark/proto/*.h")
+include_directories("${PROJECT_SOURCE_DIR}/benchmark/complexobject/*.h")
 include_directories("${PROJECT_SOURCE_DIR}/benchmark/flatbuffers/*.h")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/header/flatbuffers")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/header/flatbuffers/flatbuffers")
@@ -46,6 +47,7 @@ include_directories("${PROJECT_SOURCE_DIR}/util/source")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/source/")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/source/inplace/")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/source/proto/")
+include_directories("${PROJECT_SOURCE_DIR}/benchmark/complexobject/")
 include_directories("${PROJECT_SOURCE_DIR}/benchmark/proto/*.cc")
 include_directories("${PROJECT_SOURCE_DIR}/benchmark/flatbuffers/*.cc")
 include_directories("${PROJECT_SOURCE_DIR}/serialization/source/flatbuffers/")
@@ -61,6 +63,7 @@ file(GLOB srcProtobufcc "${PROJECT_SOURCE_DIR}/serialization/source/proto/*.cc")
 file(GLOB srcFlatbuf "${PROJECT_SOURCE_DIR}/serialization/source/flatbuffers/*.cpp")
 file(GLOB srcBenchmarkCCP "${PROJECT_SOURCE_DIR}/benchmark/proto/*.cc")
 file(GLOB srcBenchmarkCCF "${PROJECT_SOURCE_DIR}/benchmark/flatbuffers/*.cc")
+file(GLOB srcComplexObject "${PROJECT_SOURCE_DIR}/benchmark/complexobject/*.cpp")
 
 
 ## prepare data
@@ -286,6 +289,12 @@ add_executable(ProtoBufBench
 
 add_executable(FlatBufBench
         benchmark/flatbuffers/ComplexObjectL4.cpp
+        ${srcBenchmark}
+        ${srcBenchmarkCCF}
+        )
+
+add_executable(ComplexObjectBench
+        benchmark/complexobject/ComplexObject.cpp
         ${srcBenchmark}
         ${srcBenchmarkCCF}
         )
