update read sequ and rand diagrams

--- a/Experiments/plotting/Makefile
+++ b/Experiments/plotting/Makefile
@@ -1,9 +1,9 @@
 all: create clean
 
 create:
-	#pdflatex SIGMOD2023.tex
 	#pdflatex -shell-escape exp_0.tex
 	pdflatex -shell-escape exp_1.tex
+	#pdflatex -shell-escape exp_2.tex
 
 clean:
 	rm -rf *.aux  *.nav  *.vrb  *.log  *.out *.snm *.toc *.gz *.mtc* *.maf *.fls *.tmp *.bbl *.blg  *.mtc  *.bcf *.xml *.fdb_latexmk plots/*.dep plots/*.dpth plots/*.log plots/*.md5 *.abs *.auxlock
