--- a/Experiments/plotting/Makefile
+++ b/Experiments/plotting/Makefile
@@ -2,8 +2,9 @@ all: create clean
 
 create:
 	#pdflatex -shell-escape exp_0.tex
-	pdflatex -shell-escape exp_1.tex
-	#pdflatex -shell-escape exp_2.tex
+	#pdflatex -shell-escape exp_1.tex
+	pdflatex -shell-escape exp_2.tex
+	#pdflatex -shell-escape exp_2_legend.tex
 
 clean:
 	rm -rf *.aux  *.nav  *.vrb  *.log  *.out *.snm *.toc *.gz *.mtc* *.maf *.fls *.tmp *.bbl *.blg  *.mtc  *.bcf *.xml *.fdb_latexmk plots/*.dep plots/*.dpth plots/*.log plots/*.md5 *.abs *.auxlock
