--- a/Experiments/plotting/Makefile
+++ b/Experiments/plotting/Makefile
@@ -7,7 +7,7 @@ create:
 	#pdflatex -shell-escape exp_2_legend.tex
 	#pdflatex -shell-escape exp_4.tex
 	#pdflatex -shell-escape exp_5.tex
-	pdflatex -shell-escape exp_6.tex
+	#pdflatex -shell-escape exp_6.tex
 
 clean:
 	rm -rf *.aux  *.nav  *.vrb  *.log  *.out *.snm *.toc *.gz *.mtc* *.maf *.fls *.tmp *.bbl *.blg  *.mtc  *.bcf *.xml *.fdb_latexmk plots/*.dep plots/*.dpth plots/*.log plots/*.md5 *.abs *.auxlock
